--- a/.env.example
+++ b/.env.example
@@ -3,3 +3,4 @@ POCKET_ACCESS_TOKEN=pocket-access-token
 SENDGRID_API_KEY=sg-api-key
 SENDGRID_FROM=me@example.com
 KINDLE_ADDRESS=me@kindle.com
+INTERVAL=30000
