--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "axios": "^0.18.0",
     "dotenv": "^8.2.0",
     "node-readability": "^3.0.0",
+    "promise.allsettled": "^1.0.2",
     "yargs": "^13.2.4"
   }
 }
