--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "dotenv": "^8.2.0",
     "promise.allsettled": "^1.0.2",
     "read-art": "^0.5.6",
+    "slugify": "^1.4.5",
     "yargs": "^13.2.4"
   }
 }
